[flake8]
max-arguments = 9
ignore = 
    WPS110, WPS112, WPS115, WPS125, WPS201, WPS210, WPS214, WPS215, WPS230, WPS237, WPS300, WPS305, WPS306, WPS351, WPS420, WPS425, WPS463, WPS602, WPS615,
    C812, C816
    I003,
    D100, D107,
    N400

per-file-ignores = 
    **/test*.py: D101, D102, D104, S101, WPS118, WPS226, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001
    **/*dummy.py: D101, D102, D104, S101, WPS235, WPS318, WPS319, WPS442, WPS431, WPS612, I001
    src/lime_python/protocol/client/channel.py: WPS318, WPS319, WPS421
    src/lime_python/protocol/client/client_channel.py: W503
    src/lime_python/protocol/envelope.py: WPS421

exclude =
    **/**/__init__.py
    **/__init__.py

[metadata]
license_file = LICENSE